<resources>
    <string name="app_name">Where is it</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="historial">Historial</string>
    <string name="aniadir_activo">Añadir Activo</string>
    <string name="hintAddress">Ingresa la ubicación donde quieres buscar</string>
    <string name="calcular_ruta">Calcular Ruta</string>
    <string name="soporte">Soporte</string>
    <string name="escribe_acaa">Escribe acá…</string>
    <string name="enviar">Enviar</string>
    <string name="logo">Logo</string>
    <string-array name="opcionesPQRS">
        <item>Pregunta</item>
        <item>Queja</item>
        <item>Reclamo</item>
        <item>Sugerencia</item>
    </string-array>
    <string name="Usuario_conectado">Nuevo usuario conectado</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="correo_organizacional">Correo organizacional</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="finalizar">Finalizar</string>
    <string name="activos">Activos</string>
    <string name="administrador_o_activo">Administrador o activo</string>
    <string name="foto_del_activo">Foto del activo</string>
    <string name="nombre_de_referencia">Nombre de referencia</string>
    <string name="foto_fiisico">Foto del activo físico</string>
    <string name="id_activo">ID Activo</string>
    <string name="correo_responsable">Correo responsable</string>
    <string name="nombre_de_activo">Nombre de activo</string>
    <string name="ver_posicioon">Ver posición</string>
    <string name="disponible">Disponible</string>
</resources>