<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditarPerfilActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/blue">
        </HorizontalScrollView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/logoImageViewID"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="-20dp"
                app:srcCompat="@drawable/where_is_it___logo_1" />

            <TextView
                android:id="@+id/EditarPerfilTextViewID"
                android:text="Editar perfil"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1" />

        </LinearLayout>

        <ImageView
            android:id="@+id/UsuarioImageViewID"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/foto_de_perfil"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/perfil" />

        <TextView
            android:id="@+id/FotoDePerfilTextViewID"
            android:text="Foto de perfil"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/NombreUsuarioTextViewID"
            android:text="@string/nombre_de_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/NombreUsuarioEditTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="40dp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/CorreoOrganizacionalTextViewID"
            android:text="@string/correo_organizacional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/CorreoOrganizacionalEditTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginStart="40dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ContraseniaTextViewID"
            android:text="@string/contrasenia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ContraseniaEditTextID"
            android:ems="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/FinalizarButtonID"
            android:text="@string/finalizar"
            android:backgroundTint="@color/blue"
            app:iconTint="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>